Compositor does not respect interlaced video #43403

Closed
opened 2015-01-24 20:11:19 +01:00 by Aaron Carlisle · 20 comments
Member

System Information

Windows 8.0
Intel HD 4600

Blender Version
Broken: 2.73

Short description of error

Compositor does not respect interlaced video

For those who are not video Gurus Help Here

Exact steps for others to reproduce the error
Make a simple node tree with a interlaced video render the movie

The result is terrible thus we can only use half of the video cameras in the world

**System Information** Windows 8.0 Intel HD 4600 **Blender Version** Broken: 2.73 **Short description of error** Compositor does not respect interlaced video For those who are not video Gurus [Help Here ](http://en.wikipedia.org/wiki/Interlaced_video) **Exact steps for others to reproduce the error** Make a simple node tree with a interlaced video render the movie The result is terrible thus we can only use half of the video cameras in the world
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscriber: @Sergey

Added subscriber: @Sergey

I'm not really sure why in 21st century with all the digital epoch cameras will still use interlaced videos..

Any way, it is possible to de-interlace in sequencer so should also be possible to de-interlace Image and Clip datablocks. But for this having small interlaced video for tests would really help.

I'm not really sure why in 21st century with all the digital epoch cameras will still use interlaced videos.. Any way, it is possible to de-interlace in sequencer so should also be possible to de-interlace Image and Clip datablocks. But for this having small interlaced video for tests would really help.

Added subscriber: @FlorianMosleh

Added subscriber: @FlorianMosleh

In #43403#284371, @Sergey wrote:
I'm not really sure why in 21st century with all the digital epoch cameras will still use interlaced videos..

for the same reason that people still insist on using drop-frame time code.

I would say, it's to support legacy hardware in old studios, but mostly it's because using old-school technologies in production gives some weirdos the same kind of kicks as referencing old school hip hop.

> In #43403#284371, @Sergey wrote: > I'm not really sure why in 21st century with all the digital epoch cameras will still use interlaced videos.. > for the same reason that people still insist on using drop-frame time code. I would say, it's to support legacy hardware in old studios, but mostly it's because using old-school technologies in production gives some weirdos the same kind of kicks as referencing old school hip hop.
Author
Member
[0001-0250.mpg](https://archive.blender.org/developer/F139639/0001-0250.mpg)
Sergey Sharybin self-assigned this 2015-01-30 12:50:32 +01:00

Will have a look later.

Will have a look later.

This issue was referenced by 445eed8e38

This issue was referenced by 445eed8e38cceb2bd2d5e449b4efd1a61c383da8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 445eed8e38.

Closed by commit 445eed8e38.
Author
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Member

I dont see this in hash ced4c5f

I dont see this in hash ced4c5f

What exactly you don't see?

What exactly you don't see?
Author
Member

I tried to render a interlaced movie strip and did not see any interlace option or anything

I tried to render a interlaced movie strip and did not see any interlace option or anything

It's in the image settings screen.png

So if this option doesn't de-interlace your video please attach the file which is not being handled properly. But apart from that i don't see anything to be buggy here.

It's in the image settings ![screen.png](https://archive.blender.org/developer/F144969/screen.png) So if this option doesn't de-interlace your video please attach the file which is not being handled properly. But apart from that i don't see anything to be buggy here.
Author
Member

I see but i was looking at the movie clip input node which does have this option.? should this be like this?

I see but i was looking at the movie clip input node which does have this option.? should this be like this?

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

No, it shouldn't be. This is legacy technology which should just die and stop being a headache. I don't think someone is really tracking interlaced footage, so for compo just use Image dabablock set up to load movies.

No, it shouldn't be. This is legacy technology which should just die and stop being a headache. I don't think someone is really tracking interlaced footage, so for compo just use Image dabablock set up to load movies.
Author
Member

a right i will keep that in mind thanks

a right i will keep that in mind thanks
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43403
No description provided.